recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:9: error: ':' expected but ')' found.
  def square(dist){
                 ^FourSquare:17: error: identifier expected but '}' found.
}
^